# moveitpy_simple

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  moveitpy_simple.repos  package.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_and_test.yaml
doc/: developer.md  installation.md  user.md
example/: visualizer.py
moveitpy_simple/moveit_configs_utils/: __init__.py  file_loaders.py  launch_utils.py  moveit_configs_builder.py
moveitpy_simple/moveit_configs_utils/substitutions/: __init__.py  xacro.py
moveitpy_simple/moveit_configs_utils/test/: custom_moveit_config.toml  extend_custom_moveit_config.toml  robot.urdf.xacro  test_file_loaders.py  test_launch_utils.py  test_moveit_resources_configs.py  test_xacro.py
moveitpy_simple/moveit_configs_utils/test/extend_local_panda_moveit_config/: moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/extend_non_existing_moveit_config/: moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/panda_extend_moveit_config/: kinematics.yaml  moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/panda_moveit_config/: moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/partial_panda_moveit_config/: moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/robot2_moveit_config/: moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/robot2_moveit_config/config/: ompl_planning2.yaml
moveitpy_simple/moveit_configs_utils/test/robot3_moveit_config/: moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/robot_moveit_config/: moveit_configs.toml
moveitpy_simple/moveit_configs_utils/test/robot_moveit_config/config/: chomp_planning.yaml  joint_limits.yaml  kermit.srdf  moveit_controllers.yaml  ros2_controllers.yaml  trajopt_planning.yaml
moveitpy_simple/moveitpy/: __init__.py  visualization.py
moveitpy_simple/moveitpy/test/: test_moveitpy.py
moveitpy_simple/moveitpy/test/panda_moveit_config/: moveit_configs.toml  moveit_cpp.yaml
