<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveitpy_simple</name>
  <version>0.0.0</version>
  <description>A simple interface to MoveIt 2's python binding</description>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
  <author email="jafar.uruc@gmail.com">Jafar Uruc</author>
  <license>BSD</license>
  <url type="website">https://github.com/JafarAbdi/moveitpy_simple</url>
  <url type="bugtracker">https://github.com/JafarAbdi/moveitpy_simple/issues</url>
  <url type="repository">https://github.com/JafarAbdi/moveitpy_simple/</url>
  <depend>rclpy</depend>
  <build_type>moveit_py</build_type>
  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
