<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveitpy_simple</name>
  <version>0.0.0</version>
  <description>A simple interface to MoveIt 2's python binding</description>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
  <author email="jafar.uruc@gmail.com">Jafar Uruc</author>
  <license>BSD</license>
  <url type="website">https://github.com/JafarAbdi/moveitpy_simple</url>
  <url type="bugtracker">https://github.com/JafarAbdi/moveitpy_simple/issues</url>
  <url type="repository">https://github.com/JafarAbdi/moveitpy_simple/</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_py</build_depend>
  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>srdfdom</exec_depend>
  <exec_depend>python3-toml</exec_depend>
  <exec_depend>srdfdom</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>moveit_resources_panda_moveit_config</test_depend>
  <test_depend>moveit_resources_fanuc_moveit_config</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
